# MA-LOG

./: CMakeLists.txt
include/: ma-log.h
src/: main.c
